Bug 119458 - wrong sort order in "POP Filter" dialog
Summary: wrong sort order in "POP Filter" dialog
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: filtering (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-01-03 20:20 UTC by Gilles Schintgen
Modified: 2008-01-08 17:26 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshort showing the wrong sort order (15.70 KB, image/png)
2006-01-03 20:22 UTC, Gilles Schintgen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gilles Schintgen 2006-01-03 20:20:44 UTC
Version:            (using KDE KDE 3.5.0)
Installed from:    Gentoo Packages

In the "POP Filter" dialog sorting by date isn't working correctly. Instead of sorting the dates chronologically it sorts them alphabetically. I'll attach a screenshot.
Comment 1 Gilles Schintgen 2006-01-03 20:22:18 UTC
Created attachment 14123 [details]
screenshort showing the wrong sort order
Comment 2 Thomas McGuire 2008-01-08 17:26:54 UTC
SVN commit 758637 by tmcguire:

Work on the POP filter confirmation dialog:

- Port from K3ListView to QTreeWidget
- Fix layout
- Get rid of hardcoded-with-code icons and radiobuttons.
  Instead, use real radiobuttons and real icons (the icons don't
  exist yet, but I already added it to the oxygen wiki page)
- Make the help button work again
- Fix coding style
- More API documentation
- Make it possible to change the action of multiple items, either with
  the right/left keys, by clicking the header or by clicking the radiobutton
- Fix incorrect sorting

The radiobuttons are a bit flickery, but that seems to be a Qt problem
with setItemWidget().

Also, change KMail's year to 2008.

BUG: 119458
FEATURE: 63845
FEATURE: 75707


 M  +1 -1      aboutdata.cpp  
 M  +3 -1      kmatmlistview.cpp  
 M  +1 -1      kmfilter.h  
 M  +3 -1      kmfilterdlg.h  
 M  +331 -336  kmpopfiltercnfrmdlg.cpp  
 M  +107 -43   kmpopfiltercnfrmdlg.h  
 M  +20 -26    kmpopheaders.cpp  
 M  +19 -19    kmpopheaders.h  
 M  +4 -3      popaccount.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=758637