Work on the POP filter confirmation dialog:

- Port from K3ListView to QTreeWidget
- Fix layout
- Get rid of hardcoded-with-code icons and radiobuttons.
  Instead, use real radiobuttons and real icons (the icons don't
  exist yet, but I already added it to the oxygen wiki page)
- Make the help button work again
- Fix coding style
- More API documentation
- Make it possible to change the action of multiple items, either with
  the right/left keys, by clicking the header or by clicking the radiobutton
- Fix incorrect sorting

The radiobuttons are a bit flickery, but that seems to be a Qt problem
with setItemWidget().

Also, change KMail's year to 2008.

BUG: 119458
FEATURE: 63845
FEATURE: 75707

svn path=/trunk/KDE/kdepim/; revision=758637