kmpopheaders.h
@@ -20,20 +20,22 @@
 #ifndef KMPopHeaders_H
 #define KMPopHeaders_H
 
-#include "kmmessage.h"
+#include <QByteArray>
 
-class QByteArray;
+class KMMessage;
 
-enum KMPopFilterAction {Down=0, Later=1, Delete=2, NoAction=3}; //Keep these corresponding to the column numbers in the dialog for easier coding
-								//or change mapToAction and mapToColumn in KMPopHeadersView
+//Keep these corresponding to the column numbers in the dialog for easier coding
+//or change mapToAction and mapToColumn in PopHeadersView
+enum KMPopFilterAction { Down=0, Later=1, Delete=2, NoAction=3 };
 
 class KMPopHeaders {
 public:
 
   KMPopHeaders();
   ~KMPopHeaders();
-  /** constructor */
-  KMPopHeaders( const QByteArray & aId, const QByteArray & aUid, KMPopFilterAction aAction );
+
+  KMPopHeaders( const QByteArray & id, const QByteArray & uid,
+                KMPopFilterAction action );
 
   /** returns the id of the message */
   QByteArray id() const;
@@ -44,29 +46,27 @@ public:
   /** returns the header of the message */
   KMMessage * header() const;
 
-  /** set the header of the message */
-  void setHeader(KMMessage *aHeader);
+  /**
+   * Set the header of the message.
+   * The header is then managed by this class, which
+   * deletes the header in the destructor.
+   */
+  void setHeader( KMMessage *header );
 
-  /** No descriptions */
   KMPopFilterAction action() const;
 
-  /** No descriptions */
-  void setAction(KMPopFilterAction aAction);
-  /** No descriptions */
+  void setAction( KMPopFilterAction action );
+
   bool ruleMatched() const;
-  /** No descriptions */
-  void setRuleMatched(bool b);
+
+  void setRuleMatched( bool matched );
 
 private:
-  /** */
+
   KMPopFilterAction mAction;
-  /**  */
   QByteArray mId;
-  /**  */
   QByteArray mUid;
-  /**  */
   bool mRuleMatched;
-  /**  */
   KMMessage *mHeader;
 };
 
